Fix tgui-tree-toggles overflowing

--- a/src/ide/css/tgui.css
+++ b/src/ide/css/tgui.css
@@ -172,6 +172,7 @@
 .tgui-tree-cell-toggle {
 	display: block;
 	width: 15px;
+	overflow: hidden;
 }
 
 .tgui-tree-cell-content {
@@ -181,9 +182,9 @@
 
 .tgui-tree-toggle {
 	vertical-align: middle;
-	padding-right: 3px;
 	color: #999;
 	transition: color 0.5s;
+	transform: translate(0.5em, 0) scale(1.5);
 }
 
 .tgui-tree-toggle:hover {
